--- a/k8s/service-account.yaml
+++ b/k8s/service-account.yaml
@@ -4,6 +4,7 @@ metadata:
   name: s3-processor-sa
   namespace: data-processing
   annotations:
-    eks.amazonaws.com/role-arn: "arn:aws:iam::127214186803:role/data-processor-irsa-s3-role"
+    # CHANGED: Updated IAM role name with v2
+    eks.amazonaws.com/role-arn: "arn:aws:iam::127214186803:role/data-processor-v2-irsa-s3-role"
   labels:
     app: data-processor
