--- a/.github/workflows/main-deployment.yml
+++ b/.github/workflows/main-deployment.yml
@@ -8,8 +8,8 @@ on:
 
 env:
   AWS_REGION: ap-south-1
-  EKS_CLUSTER_NAME: data-processor-eks
-  ECR_REPOSITORY: data-processor
+  EKS_CLUSTER_NAME: data-processor-eks-v2
+  ECR_REPOSITORY: data-processor-v2
   K8S_NAMESPACE: data-processing
   TF_VERSION: 1.5.0
 
