--- a/k8s/cronjob.yaml
+++ b/k8s/cronjob.yaml
@@ -7,7 +7,6 @@ metadata:
     app: data-processor
 spec:
   schedule: "0 0 * * *"
-
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 1
 
@@ -24,20 +23,21 @@ spec:
 
           containers:
             - name: data-processor
-              image: 127214186803.dkr.ecr.ap-south-1.amazonaws.com/data-processor:latest
+              image: 127214186803.dkr.ecr.ap-south-1.amazonaws.com/data-processor-v2:latest
               imagePullPolicy: Always
 
               env:
                 - name: RAW_BUCKET
-                  value: "raw-data-devops-mumbai-2025-55522215"
+                  value: "raw-data-devops-mumbai-2025-55522215-v2"
                 - name: PROCESSED_BUCKET
-                  value: "processed-data-devops-mumbai-2025-55522215"
+                  value: "processed-data-devops-mumbai-2025-55522215-v2"
                 - name: INPUT_KEY
                   value: "input.csv"
                 - name: OUTPUT_KEY
                   value: "output.csv"
                 - name: AWS_DEFAULT_REGION
                   value: "ap-south-1"
+
               resources:
                 requests:
                   memory: "256Mi"
